# privacy-aware-rag-bot

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  setup_fga.py
configs/: config.yaml
documents/: budget_q4.txt  general_handbook.txt  salary_policy.txt
templates/: chat.html  denied.html  home.html
