[project]
name = "privacy-aware-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "groq>=1.2.0",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
    "openfga-sdk>=0.10.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.0",
    "sentence-transformers>=5.5.0",
]
